# study_rust

./: .env  .gitignore  Cargo.toml  Cross.toml  bacon.toml  config.toml  diesel.toml  generate.sh  hot  test.sh
.github/workflows/: build.yml
app/: Cargo.toml  build.rs
app/dashboard/: app.slint
app/dashboard/components/: counter-card.slint  editor-card.slint  page-title.slint
app/dashboard/pages/: home-page.slint
app/dashboard/pages/home/: models.slint  page.slint
app/dashboard/pages/home/components/: log-card.slint  page.slint  panel-placeholder-card.slint  process-step-card.slint  realtime-field-row.slint  realtime-info-card.slint  weight-status-card.slint
app/sleek-ui/: app-theme.slint  colors.slint  widgets.slint
app/sleek-ui/structs/: data-structs.slint  theme.slint
app/sleek-ui/widgets/: alert.slint  breadcrumb.slint  button-interface.slint  card.slint  checkbox.slint  code.slint  collapse.slint  divider.slint  floating-button.slint  floating-icon-button.slint  icon.slint  input-number.slint  input.slint  linear-progress.slint  link.slint  modal.slint  notification.slint  popover.slint  radio-button.slint  radio.slint  scrollview.slint  select.slint  slider.slint  spinner.slint  switch.slint  tabs.slint  tag.slint  text.slint  title.slint  tooltip.slint
app/sleek-ui/widgets/button/: button.slint  theme.slint
app/sleek-ui/widgets/icon-button/: icon-button.slint  theme.slint
app/sleek-ui/widgets/menu/: index.slint  menu-group-title.slint  menu-link.slint  menu-submenu.slint  menu.slint
app/src/: home_state.rs  main.rs
app/src/pages/: home_state.rs  mod.rs
app/src/pages/test/: home_state_test.rs  mod.rs
app/src/router/: mod.rs
app/ui/: app.slint  videoconvert.slint
common/: Cargo.toml
common/src/: lib.rs  result.rs
common/src/db/: connect.rs  mod.rs  user.rs
common/src/entity/: mod.rs  user.rs
common/src/error/: errors.rs  mod.rs
common/src/jwt/: mod.rs
common/src/model/: mod.rs  user.rs  users.rs
common/src/result/: mod.rs
config/: Cargo.toml  config.toml
config/src/: cfgs.rs  default.rs  get_config.rs  lib.rs
configs/: Cargo.toml
configs/src/: get_config.rs  lib.rs
docs/: rust-project-learning.md
docs/plans/: 2026-04-03-home-design.md  2026-04-03-home-layout.md
docs/superpowers/plans/: 2026-04-03-home-realtime-panel.md
docs/superpowers/specs/: 2026-04-03-home-realtime-panel-design.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-11-01-104200_create_user/: up.sql
model/: mod.rs
router/: Cargo.toml  mod.rs
router/src/: index.rs  lib.rs  state.rs
router/src/routes/: index.rs  mod.rs  user.rs
screen/: Cargo.toml  mod.rs  record.rs  shot.rs
screen/src/: lib.rs  record.rs  shot.rs
script/: build.sh  generate.sh  test.sh
src/: lib.rs  main.rs  schema.rs  study.rs
src/common/: result.rs
src/model/: connect.rs  mod.rs
src/router/: index.rs  mod.rs  route.rs  router.rs
src/screen/: record.rs  shot.rs
