[workspace]
members = [
    "app",
    "common", "config",
]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["xu756"]
[workspace.dependencies]
axum = "0.8.6"
log = "0.4.22"
serde_json = "1.0.132"
serde = "1.0.214"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["cors"] }
once_cell = "1.20.0"
toml = "0.9.8"
dotenv = "0.15.0"
jsonwebtoken = "10.1.0"
chrono = "0.4.38"

sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite","with-time", "macros" ] }



