[workspace]
members = [
    "app",
    "common", "config",
]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["xu756"]
[workspace.dependencies]
axum = "0.8.8"
log = "0.4.29"
serde_json = "1.0.149"
serde = "1.0.214"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
once_cell = "1.20.0"
toml = "0.9.8"
dotenv = "0.15.0"
envy = "0.4"

jsonwebtoken = "10.2.0"
chrono = "0.4.38"

sea-orm = { version = "1.1.19", features = [ "sqlx-sqlite","with-time", "macros" ] }



