[workspace]
members = [
    "app",
    "common",
    "config",
    "router",
]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["xu756"]
[workspace.dependencies]
axum = "0.8.8"
log = "0.4.29"
serde_json = "1.0.149"
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
once_cell = "1.21.3"
toml = "0.9.8"
dotenv = "0.15.0"

jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.44"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio","with-time", "macros"] }

slint={version = "1.15.1",features = ["std","backend-winit","renderer-femtovg","compat-1-2"]}
slint-build = "1.15.1"