[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
[dependencies]
router = { path = "../router" }
tokio = { workspace = true }
slint = { workspace = true }
futures = { workspace = true }
gst = { workspace = true }
gst-app = { workspace = true }
gst-video = { workspace = true }
anyhow = { workspace = true }
[build-dependencies]
slint-build = { workspace = true }
