[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
[dependencies]
router = { path = "../router" }
tokio = { workspace = true }
slint = { workspace = true }

[dev-dependencies]
i-slint-backend-testing = "1.15.1"

[build-dependencies]
slint-build = { workspace = true }
