[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
[dependencies]
serde = { workspace = true, features = ["derive"] }
axum = { workspace = true }
serde_json = { workspace = true }
config = { path = "../config" }
jsonwebtoken = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
diesel = {workspace = true}
chrono = {workspace = true}