[package]
name = "router"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
common = { path = "../common" }
axum = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }