[package]
name = "screen"
edition.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcap = { workspace = true }
image = { workspace = true }
scrap = { workspace = true }
repng = { workspace = true }
smol = { workspace = true }
ffmpeg-next = { workspace = true }